--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,14 +1,16 @@
 {
   "name": "front-end",
   "version": "0.1.0",
-  "proxy" : "https://I4G-hackathon.herokuapp.com",
+  "proxy": "https://I4G-hackathon.herokuapp.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.1.0",
     "react-scripts": "5.0.0-next.58",
